Fixex menu on mobile and optimized header.jpg

--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -11,6 +11,7 @@ header.mobile_title {
 	padding: 1em;
 	box-sizing: border-box;
 	text-align: center;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
 header.stock.generic a {
@@ -53,7 +54,7 @@ header.stock.generic a svg {
 
 div.mobile_menu {
 	right: -80vw;
-	margin-top: 30px;
+	margin-top: 85px;
 }
 
 div.mobile_menu.visible {
@@ -71,4 +72,6 @@ nav#main a {
 	border-bottom: 1px solid @color_grey;
 	color: @color_aqua;
 	text-align: center;
+	font-size: 1.3em;
+	text-decoration: none;
 }
